# zecpaperwallet

./: .gitignore  LICENSE  README.md
cli/: .gitignore  Cargo.toml  main.cpp  mkrelease.sh
cli/src/: main.rs  version.rs
docker/: Dockerfile
lib/: Cargo.toml
lib/src/: lib.rs  paper.rs  pdf.rs
qtlib/: Cargo.toml  Makefile
qtlib/src/: lib.rs  main.cpp  zecpaperrust.h
ui/: .gitignore  mkdockerwinlinux.sh  mkrelease.sh  papersapling.pro  zecpaperwalletui_resource.rc
ui/qtlib/: Cargo.toml  Makefile
ui/qtlib/src/: lib.rs  main.cpp  zecpaperrust.h
ui/res/: Info.plist  logo.icns  logo.xpm
ui/src/: about.ui  ellidedlabel.cpp  ellidedlabel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  precompiled.h  qrcodelabel.cpp  qrcodelabel.h  ui_mainwindow.h  ui_wallet.h  version.h  wallet.ui
web/: Cargo.toml  LICENSE_MIT  README.md
web/src/: lib.rs
web/www/: index.html  index.js  package-lock.json  webpack.config.js
web/zecpaperwallet/: Cargo.toml
web/zecpaperwallet/src/: lib.rs
web/zecpaperwallet/www/: index.html  index.js  package-lock.json  package.json
