[package]
name = "zecpaperlib"
version = "0.1.0"
authors = ["ZecWallet"]
edition = "2018"

[features]
default = ["printpdf"]

[dependencies]
rand = "0.5"
hex = "0.3"
bech32 = "0.6"
zcash_primitives = {  git = "https://github.com/adityapk00/librustzcash", branch = "paperwallet" }
#zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
json = "0.11.14"    
qrcode = { version = "0.8", default-features = false }
printpdf = { version = "0.2.8", optional = true }
libsecp256k1 = "0.2.2"
ripemd160 = "0.8.0"
sha2 = "0.8.0"
base58 = "0.1.0"

[dev-dependencies]
array2d = "0.1.0"
